# LINA

./: .gitignore  Dockerfile  README.md  docker-compose-ai.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_memory.py
app/: main.py
app/Milvus/: Milvus.py  embedder.py  log_processor.py
app/chains/: chains.py
app/data/: cleanlogs.csv  cleanlogs22.csv
app/models/: agent_state.py  models.py
app/nodes/: chat_node.py  log_analyzer_node.py  network_designer_node.py  server_manager_node.py  supervisor_node.py
app/prompts/: prompts.py
app/routers/: lina_router.py
app/schemas/: lina_schema.py
app/services/: lina_service.py
app/workflow/: graph.py
streamlitapp/: streamlit_app.py
